--- a/bib/unfolding.bib
+++ b/bib/unfolding.bib
@@ -74,3 +74,46 @@ author = "G. D'Agostini"
    pages = "1087-1092",
    doi = "http://dx.doi.org/10.1063/1.1699114" 
 }
+@article {MR2476411,
+    AUTHOR = {Diaconis, Persi},
+     TITLE = {The {M}arkov chain {M}onte {C}arlo revolution},
+   JOURNAL = {Bull. Amer. Math. Soc. (N.S.)},
+  FJOURNAL = {American Mathematical Society. Bulletin. New Series},
+    VOLUME = {46},
+      YEAR = {2009},
+    NUMBER = {2},
+     PAGES = {179--205},
+      ISSN = {0273-0979},
+     CODEN = {BAMOAD},
+   MRCLASS = {60J20 (60J27 65C05)},
+  MRNUMBER = {2476411 (2010b:60204)},
+MRREVIEWER = {Thomas Jansen},
+       DOI = {10.1090/S0273-0979-08-01238-X},
+       URL = {http://dx.doi.org/10.1090/S0273-0979-08-01238-X},
+}
+
+@misc{pyfbu,
+  title = {PyFBU},
+  howpublished = {\url{https://pypi.python.org/pypi/fbu/0.0.2}},
+  note = {Accessed: 2014-04-14}
+}
+
+@article{Patil:Huard:Fonnesbeck:2010:JSSOBK:v35i04,
+  author = "Anand Patil and David Huard and Christopher J. Fonnesbeck",
+  title = "PyMC: Bayesian Stochastic Modelling in Python",
+  journal = "Journal of Statistical Software",
+  volume = "35",
+  number = "4",
+  pages = "1--81",
+  day =  "16",
+  month = "7",
+  year = "2010",
+  CODEN = "JSSOBK",
+  ISSN = "1548-7660",
+  bibdate = "2010-01-22",
+  URL =  "http://www.jstatsoft.org/v35/i04",
+  accepted = "2010-01-22",
+  acknowledgement = "",
+  keywords =  "",
+  submitted = "2008-12-22",
+}
