--- a/tex/preamble.tex
+++ b/tex/preamble.tex
@@ -88,7 +88,7 @@
 \newcommand{\Bckg}{\ensuremath{\vect{B}}}
 \newcommand{\thetavec}{\ensuremath{\vect{\theta}}}
 \newcommand{\etavec}{\ensuremath{\vect{\eta}}}
-\newcommand{\TrasfMatrix}{\ensuremath{\mathcal{M}}}
+\newcommand{\TrasfMatrix}{\ensuremath{\vect{M}}}
 \newcommand{\Real}{\ensuremath{\mathbb{R}}}
 \newcommand{\Integer}{\ensuremath{\mathbb{N}}}
 \newcommand{\conditionalProb}[2]{\ensuremath{p\left(#1|#2\right)}}
